major updates for new api projects, multimodal processing, example code, and documentation